去掉中众安邮箱

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "files": [
     "dist"
   ],
-  "author": "成雨 <rensailong@zhongan.io>",
+  "author": "成雨 <1121352970@qq.com>",
   "repository": {
     "type": "git",
     "url": ""
